2003-04-17	Joel Basson  <jstrike@mweb.co.za>	

* ComboBox.cs
* ColorDialog.cs
* Improved functionality in RadioBox.cs
* Fix some things that were broken with the update to gtk-sharp-0.8

2003-03-17  Joel Basson  <jstrike@mweb.co.za>

* FileDialog.cs
* Updated Demo.cs and added "Enabled" property
 
2003-03-10  Joel Basson  <jstrike@mweb.co.za>

* Update Demo.cs to reflect current status, and got rid termination bug

2003-03-10  Joel Basson  <jstrike@mweb.co.za>

* PictureBox.cs

2003-03-08  Joel Basson  <jstrike@mweb.co.za>

* Frame.cs should have been GroupBox.cs

2003-03-07  Joel Basson  <jstrike@mweb.co.za>

*	CheckBox.cs
*	RadioButton.cs
*	Frame.cs
*	Added properties: Size and Name
*	Touchups here and there

2002-8-7  DennisHayes <dennish@raytek.com>

*  Started changelog

2002-8-7  DennisHayes <dennish@raytek.com>
Check in for  Remco de Jong <rdj@rdj.cg.nu>

* HorizontalAlignment.cs
* ProgressBar.cs
* ScrollBars.cs
* TextBox.cs
* TextBoxBase.cs
* added new files with some functinality