@@ -1,3 +1,9 @@
+2003-05-07  Joel Basson  <jstrike@mweb.co.za>
+
+* Added ComboBox.Items.Add and ComboBox.Items.Add to ComboBox.cs
+* FontDialog.cs
+* Added new Demo2.cs test app
+
 2003-04-17	Joel Basson  <jstrike@mweb.co.za>	
 
 * ComboBox.cs
